k8s/apps/internal/android/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: android
  namespace: android
spec:
  type: ClusterIP
  selector:
    app: android
  ports:
    - name: web
      port: 80
      targetPort: 8080
