k8s/apps/internal/android/https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: android-https
  namespace: android
spec:
  parentRefs:
    - name: internal-production
      namespace: gateway
  hostnames:
    - android.emisia.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: android
          port: 80
